# term-printer

./: LICENSE  Makefile  Pipfile  README.md  setup.cfg
examples/: attrs_print.py  bg_color_print.py  color_256.py  color_print.py  format_print.py  std_text_print.py
term_printer/: __init__.py
term_printer/consts/: color.py  format.py
term_printer/objects/: std_text.py
tests/: test_print.py
