[metadata]
name = term_printer
version = attr: term_printer.__version__
url = attr: term_printer.__url__
author = attr: term_printer.__author__
author_email = attr: term_printer.__author_email__
license = attr: term_printer.__license__
license_file = LICENSE
description = attr: term_printer.__description__
long_description = file: README.md
keywords = term-color term-format color-print print-color,
classifiers =
    Intended Audience:: Developers
    License :: OSI Approved :: Apache License
    Operating System:: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

[flake8]
extend-ignore=E501
exclude=__init__.py
max-line-length=120

[mypy]
python_version=3.9
disallow_untyped_defs=True
ignore_missing_imports=True

[isort]
multi_line_output=3
include_trailing_comma=true
