[metadata]
name = term-printer
version = attr: term_printer.__version__
url = https://github.com/nanato12/term-printer
author = nanato12
author_email = admin@nanato12.info
license = Apache License 2.0
license_file = LICENSE
description = Print 'text color' and 'text format' on Term with Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = term-color term-format color-print print-color
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

[flake8]
extend-ignore=E501
exclude=__init__.py
max-line-length=120

[mypy]
python_version=3.9
disallow_untyped_defs=True
ignore_missing_imports=True

[isort]
multi_line_output=3
include_trailing_comma=true
